[package]
name = "rush-prompt"
description = """Contruct a prompt and return as an ExecResult
This won't print anything to stdout"""
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11"
colored = "3.1"
dirs = "6.0"
gethostname = "1.1"
rush-plugin = { path = "../../rush-plugin" }
